--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <article class="content">
+  <main>
     <div class="content__qrcode">
       <img src="images/image-qr-code.png" alt="A QR Code">
     </div>
@@ -21,6 +21,6 @@
     <h1 class="content__header">Improve your front-end skills by building projects</h1>
     <p class="content__instruction">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     
-  </article>  
+  </main>  
 </body>
 </html>
